import "ydb/core/protos/counters.proto";

package NKikimr.NFlatTxCoordinator;

option java_package = "ru.yandex.kikimr.proto";

option (TabletTypeName) = "Coordinator"; // Used as prefix for all counters

// Real coordinator counters are dynamic. Probably we should fix this?
enum ESimpleCounters {
    COUNTER_MISSING_CONFIG = 0 [(CounterOpts) = {Name: "MissingConfig"}];
}

enum ECumulativeCounters {
    COUNTER_REQ_ACQUIRE_READ_STEP = 0 [(CounterOpts) = {Name: "AcquireReadStepRequests"}];
}

enum EPercentileCounters {
    option (GlobalCounterOpts) = {
        Ranges { Value: 0      Name: "0 ms"      }
        Ranges { Value: 1      Name: "1 ms"      }
    };

    COUNTER_PERCENTILE_IGNORE = 0;
}

enum ETxTypes {
    TXTYPE_INIT = 0                                       [(TxTypeOpts) = {Name: "TxInit"}];
    TXTYPE_STEP = 1                                       [(TxTypeOpts) = {Name: "TxStep"}];
    TXTYPE_MEDIATOR_CONFIRMATIONS = 2                     [(TxTypeOpts) = {Name: "TxMediatorConfirmations"}];
    TXTYPE_RESTART_MEDIATOR = 3                           [(TxTypeOpts) = {Name: "TxRestartMediator"}];
    TXTYPE_ACQUIRE_READ_STEP = 4                          [(TxTypeOpts) = {Name: "TxAcquireReadStep"}];
    TXTYPE_SUBSCRIBE_READ_STEP = 5                        [(TxTypeOpts) = {Name: "TxSubscribeReadStep"}];
    TXTYPE_UNSUBSCRIBE_READ_STEP = 6                      [(TxTypeOpts) = {Name: "TxUnsubscribeReadStep"}];
}
